# tsetlin.idf

./: .gitmodules  CMakeLists.txt  README.md  SConscript  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  clause.c  clause.h  main.c  mnist.c  mnist.h  sdcard.c  sdcard.h  tsetlin.c  tsetlin.h  tsetlin.pb-c.c  tsetlin.pb-c.h
mnist/: CMakeLists.txt  mnist.c  mnist.h
protobuf/: CMakeLists.txt
protobuf-c/: CMakeLists.txt
random/: CMakeLists.txt  fast_rand.h  pcg32_fast.c  xorshift128.c
tsetlin/: CMakeLists.txt  clause.c  clause.h  tsetlin.c  tsetlin.h
utils/: logging.h
